manifests/mailhog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: mailhog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailhog
    spec:
      containers:
        - name: mailhog
          image: docker.io/druidfi/mailhog:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: smtp
              containerPort: 1025
            - name: http
              containerPort: 8025
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 55
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      terminationGracePeriodSeconds: 0
