manifests/mailhog/manifests.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: smtp
      port: 25
      targetPort: smtp
  selector:
    app.kubernetes.io/name: mailhog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: mailhog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailhog
    spec:
      automountServiceAccountToken: false
      containers:
        - image: docker.io/druidfi/mailhog:1.0.1
          imagePullPolicy: IfNotPresent
          name: mailhog
          ports:
            - containerPort: 1025
              name: smtp
            - containerPort: 8025
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          startupProbe:
            failureThreshold: 55
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      terminationGracePeriodSeconds: 0
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog
spec:
  rules:
    - host: mail.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: mailhog
                port:
                  name: http
            path: /
            pathType: Prefix
